@startuml class
package domain {
    interface Expression
    Expression <|-- Value
    Expression <|-- Variable
}
package binary_operator {
    abstract BinaryOperator
    Expression <|-- BinaryOperator
    package arithmetic {
        BinaryOperator <|-- Add
        BinaryOperator <|-- Substract
        BinaryOperator <|-- Multiply
        BinaryOperator <|-- Divide
        BinaryOperator <|-- Modulo
    }
    package assignment {
        BinaryOperator <|-- SimpleAssign
        BinaryOperator <|-- AddAssign
        BinaryOperator <|-- SubAssign
        BinaryOperator <|-- MulAssign
        BinaryOperator <|-- DivAssign
        BinaryOperator <|-- RightShiftAssign
        BinaryOperator <|-- LeftShiftAssign
        BinaryOperator <|-- ModuloAssign
    }
    package bitwise_operator {
        BinaryOperator <|- And
        BinaryOperator <|- Or
        BinaryOperator <|- Xor
        BinaryOperator <|- RightShift
        BinaryOperator <|- LeftShift
    }
    package logical_operator {
        BinaryOperator <|- Both
        BinaryOperator <|- Either
    }
    package relatonal_operator {
        BinaryOperator <|- Equal
        BinaryOperator <|- NotEqual
        BinaryOperator <|- Less
        BinaryOperator <|- LessEqual
        BinaryOperator <|- Greater
        BinaryOperator <|- GreaterEqual
    }
}
package unary_operator {
    abstract UnaryOperator
    Expression <|- UnaryOperator
    package inc_dec {
        UnaryOperator <|- Increment
        UnaryOperator <|- Decrement
    }
    package logical_not {
        UnaryOperator <|- LogicalNot
    }
}
package request {
    CalculatorRequest *-- CalculatorValidRequest
    CalculatorRequest *-- CalculatorInValidRequest
}
Calculator *-- Expression
Calculator *-- CalculatorValidRequest


@enduml